pve-firewall (1.0-7) unstable; urgency=low

  * proxy host rule API calls to correct node

 -- Proxmox Support Team <support@proxmox.com>  Thu, 26 Jun 2014 07:12:57 +0200

pve-firewall (1.0-6) unstable; urgency=low

  * ipmlement ipfilter ipsets

 -- Proxmox Support Team <support@proxmox.com>  Thu, 12 Jun 2014 08:37:08 +0200

pve-firewall (1.0-5) unstable; urgency=low

  * remove ipsets when firewall disabled

 -- Proxmox Support Team <support@proxmox.com>  Wed, 04 Jun 2014 08:50:18 +0200

pve-firewall (1.0-4) unstable; urgency=low

  * depend on iptables and ipset

 -- Proxmox Support Team <support@proxmox.com>  Wed, 04 Jun 2014 06:45:33 +0200

pve-firewall (1.0-3) unstable; urgency=low

  * change dh_installinit order (register pvefw-logger before pve-firewall)

 -- Proxmox Support Team <support@proxmox.com>  Wed, 04 Jun 2014 06:24:21 +0200

pve-firewall (1.0-2) unstable; urgency=low

  * add experimental nflog logging daemon

 -- Proxmox Support Team <support@proxmox.com>  Thu, 13 Mar 2014 08:27:01 +0100

pve-firewall (1.0-1) unstable; urgency=low

  * initial package

 -- Proxmox Support Team <support@proxmox.com>  Mon, 03 Mar 2014 08:37:06 +0100
